--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "firebase": "^2.2.6",
     "jquery": "^2.1.4",
     "lodash": "^3.9.3",
+    "material-ui": "^0.8.0",
     "method-override": "^2.3.3",
     "morgan": "^1.5.3",
     "nodemon": "^1.3.7",
     "react": "^0.13.3",
+    "react-tap-event-plugin": "^0.1.7",
+    "react-tools": "^0.13.3",
     "reactify": "^1.1.1",
     "request": "^2.57.0",
     "watchify": "^3.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babelify": "^6.1.2",
+    "livereactload": "^0.5.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "npm install",
+    "start": "make dev"
   },
   "repository": {
     "type": "git",
