--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Start a react project",
   "main": "app.js",
   "dependencies": {
+    "babel": "^5.5.8",
     "body-parser": "^1.12.4",
     "express": "^4.12.4",
     "firebase": "^2.2.6",
@@ -13,12 +14,12 @@
     "method-override": "^2.3.3",
     "morgan": "^1.5.3",
     "nodemon": "^1.3.7",
+    "radium": "^0.13.0",
     "react": "^0.13.3",
     "react-tap-event-plugin": "^0.1.7",
     "react-tools": "^0.13.3",
-    "reactify": "^1.1.1",
     "request": "^2.57.0",
-    "watchify": "^3.2.1"
+    "standard": "^4.2.1"
   },
   "devDependencies": {
     "babelify": "^6.1.2",
