--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-tap-event-plugin": "^0.1.7",
     "react-tools": "^0.13.3",
     "request": "^2.57.0",
-    "standard": "^4.2.1"
+    "standard": "^4.2.1",
+    "watchify": "^3.2.3"
   },
   "devDependencies": {
     "babelify": "^6.1.2",
