--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^1.3.7",
     "radium": "^0.13.0",
     "react": "^0.13.3",
+    "react-components-9dots": "^1.0.15",
     "react-tap-event-plugin": "^0.1.7",
     "react-tools": "^0.13.3",
     "request": "^2.57.0",
