--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "radium": "^0.13.0",
     "react": "^0.13.3",
     "react-components-9dots": "^1.0.15",
+    "react-localstorage": "^0.2.4",
     "react-tap-event-plugin": "^0.1.7",
     "react-tools": "^0.13.3",
     "request": "^2.57.0",
